--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.1"
@@ -18,6 +19,7 @@
     "@eslint/js": "^9.25.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.5.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.1",
     "eslint-plugin-react-hooks": "^5.2.0",
