--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "rut.js": "^2.1.0"
   },
