--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
+    "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -20,7 +21,10 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "rut.js": "^2.1.0"
+    "rut.js": "^2.1.0",
+    "sweetalert2": "^11.22.0",
+    "tabulator-tables": "^6.3.1",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
