feat(gitignore): docker mysql data

--- a/backend/src/config/.env.example
+++ b/backend/src/config/.env.example
@@ -1,7 +1,7 @@
 HOST=localhost
 PORT=3306
-DB_USER=USER
-DB_PASSWORD=PASSWORD
-DB_NAME=NAME
-TOKEN_JWT=JWT_SECRET
-cookieKey=COOKIE_KEY
+DB_USER=admin
+DB_PASSWORD=admin
+DB_NAME=mydb
+TOKEN_JWT=secreto_token
+cookieKey=secreto_cookie
