--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,71 +2,15 @@ version: "3.9"
 
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:latest
     container_name: mysql
-    restart: always
-    env_file:
-      - ./backend/src/config/.env
-    environment:
-      MYSQL_ROOT_PASSWORD: testeo
-      MYSQL_DATABASE: proyecto
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: testeo
     ports:
       - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-  backend:
-    image: node:20
-    container_name: backend
-    working_dir: /app/backend
-    command: sh -c "npm install && npm run dev -- --host"
-    volumes:
-      - ./backend:/app/backend
     environment:
-      - NODE_ENV=development
-    env_file:
-      - ./backend/src/config/.env
-    ports:
-      - "5000:5000"
-    depends_on:
-      - mysql
-
-  frontend:
-    image: node:20
-    container_name: frontend
-    working_dir: /app/frontend
-    command: sh -c "npm install && npm run dev -- --host"
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mydb
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
     volumes:
-      - ./frontend:/app/frontend
-    environment:
-      - NODE_ENV=development
-    ports:
-      - "5173:5173"
-    depends_on:
-      - backend
-
-  ubuntu:
-    image: ubuntu:22.04
-    container_name: ubuntu-dev
-    tty: true
-    stdin_open: true
-    command: bash
-    volumes:
-      - ./:/workspace
-    working_dir: /workspace
-    depends_on:
-      - mysql
-    environment:
-      - DEBIAN_FRONTEND=noninteractive
-    # Instala herramientas útiles y cliente mysql al iniciar
-    entrypoint: >
-      bash -c "
-        apt-get update &&
-        apt-get install -y nano vim git curl mysql-client &&
-        bash
-      "
-
-volumes:
-  mysql_data:
+      - ./mysql_data:/var/lib/mysql
+    restart: unless-stopped
