--- a/backend/src/config/.env.example
+++ b/backend/src/config/.env.example
@@ -1,7 +1,8 @@
 HOST=localhost
-PORT=3306
+PORT=3000
 DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=mydb
+DB_PORT=3306
 TOKEN_JWT=secreto_token
 cookieKey=secreto_cookie
