feat(front): add dotenv

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@formkit/tempo": "^0.1.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
