--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
+    "rut.js": "^2.1.0",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
