--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,13 +12,25 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Vite
+.vite
+
+# Environment files
+.env
+
+# Dependency directories
+node_modules/
+pnpm-lock.yaml
+yarn.lock
+
+# Build output
+dist/
+build/
+
+# IDEs
+.vscode/
+.idea/
+
+# OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
